--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.2",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
