--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.60.5",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^5.0.2",
+    "react-native-webview": "^7.1.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0"
